# digital-pet

./: .gitignore  CMakeLists.txt  README.md  digital pet.sln
digital pet/: Rectshape.c  Rectshape.h  digital pet.vcxproj  digital pet.vcxproj.filters  dp_main.c
src/: main.c
